refactor: complete service rename documentation and logging updates

--- a/docs/api-reference/introduction.mdx
+++ b/docs/api-reference/introduction.mdx
@@ -1,15 +1,15 @@
 ---
 title: 'API Reference'
-description: 'InfraGPT Core Service API documentation'
+description: 'Backend Service API documentation'
 ---
 
 ## Overview
 
-The InfraGPT Core Service provides REST and gRPC APIs for infrastructure management through Slack integration. The service handles user authentication, Slack events, and coordinates with the Agent Service for AI-powered responses.
+The Backend Service provides REST and gRPC APIs for infrastructure management through Slack integration. The service handles user authentication, Slack events, and coordinates with the Agent Service for AI-powered responses.
 
 ## Architecture
 
-The Core Service is built with:
+The Backend Service is built with:
 - **Go** - High-performance backend service
 - **PostgreSQL** - Data persistence and session management
 - **gRPC** - Communication with Agent Service
