--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -71,7 +71,7 @@ Example queries:
 
 For team collaboration, set up the Slack bot:
 
-1. **Deploy the Core Service** - Follow the [development guide](/development) to deploy the Go service
+1. **Deploy the Backend Service** - Follow the [development guide](/development) to deploy the Go service
 2. **Configure Slack App** - Create a Slack app with Socket Mode enabled
 3. **Set Environment Variables** - Configure your Slack tokens and database connection
 
