--- a/docs/api-reference/introduction.mdx
+++ b/docs/api-reference/introduction.mdx
@@ -21,14 +21,14 @@ The Backend Service is built with:
   <Card
     title="Health Check"
     icon="heart-pulse"
-    href="/api-reference/core/health"
+    href="/api-reference/backend/health"
   >
     Service health and status endpoints
   </Card>
   <Card
     title="Slack Events"
     icon="slack"
-    href="/api-reference/core/slack"
+    href="/api-reference/backend/slack"
   >
     Slack app mention and message handling
   </Card>
@@ -52,7 +52,7 @@ The service uses multiple authentication methods:
 
 ## Data Models
 
-### Core Entities
+### Backend Entities
 - **User** - Slack user information and preferences
 - **Channel** - Slack channel configuration
 - **Conversation** - Message threads and context
